--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -3,7 +3,7 @@
 <head>
     <title>Wildlife-Tracker</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="/App.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <ul class="nav nav-tabs">
@@ -14,7 +14,7 @@
 </ul>
 <div class="container">
     <div class="page-header">
-        <h1 class="main">Welcome to Wildlife Community service</h1>
+        <h1 class="main">Track Wildlife Here!</h1>
     </div>
     <div class="col-md-12">
         {{#block "content"}}
@@ -24,7 +24,7 @@
 <footer class="footer">
     <div class="container">
         <hr>
-        <article>We aim to serve and protect all wildlife at all costs</article>
+        <article>Keep your the park clean!!!</article>
     </div>
 </footer>
 </body>
