--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,17 +1,23 @@
+{{#partial "title"}}Douglas Fir{{/partial}}
+
 {{#partial "content"}}
     <div class="jumbotron">
         <div class="row">
-            <div class="col-md-5">
-                <img src="/images/COVID_CampaignImage_3.jpg" width="350" height="350"><br>
+            <div class="col-md-6">
+                <img src="/images/1.jpeg" width="350" height="350"><br>
                 <a href="/animal/form">Add new Animal</a>
             </div>
-            <div class="col-md-5">
-                <img src="/images/eec45170d1861999f671aae3abeacf74.jpg" width="350" height="350"><br>
+            <div class="col-md-6">
+                <img src="/images/2.jpeg" width="350" height="350"><br>
                 <a href="/Endangered/form">Add new Endangered animals</a>
             </div>
-            <div class="col-md-5">
-                <img src="/images/Wild-Beautiful-sunset-in-Africa-with-animals-safari.jpg" width="350" height="350" ><br>
+            <div class="col-md-6">
+                <img src="/images/3.jpg" width="350" height="350" ><br>
                 <a href="/ranger/form">Add rangers</a>
+            </div>
+            <div class="col-md-6">
+                <img src="/images/4.jpeg" width="350" height="350" ><br>
+                <a href="/ranger/form">About</a>
             </div>
         </div>
     </div>
