--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wildlife-Tracker</title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="/styles.css">
+    <title>Douglas Fir</title>
+    {{#block "styles"}}
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+        <link rel="stylesheet" href="../css/styles.css">
+    {{/block}}
 </head>
 <body>
 <ul class="nav nav-tabs">
     <li role="presentation" class="nav"><a href="/">Home</a></li>
-    <li role="presentation" class="nav"><a href="/animals/new">View Animals</a></li>
-    <li role="presentation" class="nav"><a href="/Endangered/new">View Endangered Animals</a></li>
-    <li role="presentation" class="nav"><a href="/ranger/new">View rangers</a></li>
+    <li role="presentation" class="nav"><a href="/animals/new">All Animals</a></li>
+    <li role="presentation" class="nav"><a href="/Endangered/new">Endangered Animals</a></li>
+    <li role="presentation" class="nav"><a href="/ranger/new">Rangers</a></li>
 </ul>
 <div class="container">
     <div class="page-header">
