--- a/src/main/resources/templates/ranger.hbs
+++ b/src/main/resources/templates/ranger.hbs
@@ -1,3 +1,10 @@
+{{#partial "title"}}Ranger{{/partial}}
+
+{{#block "styles"}}
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="../css/styles.css">
+{{/block}}
+
 {{#partial "content"}}
     <div class="jumbotron">
         <h3>All rangers present</h3>
