--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -8,7 +8,7 @@
     {{/block}}
 </head>
 <body>
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs" id ="navbar">
     <li role="presentation" class="nav"><a href="/">Home</a></li>
     <li role="presentation" class="nav"><a href="/animals/new">All Animals</a></li>
     <li role="presentation" class="nav"><a href="/Endangered/new">Endangered Animals</a></li>
