--- a/src/main/resources/templates/animal-form.hbs
+++ b/src/main/resources/templates/animal-form.hbs
@@ -10,12 +10,12 @@
         <form action="/animals/new" method="post">
             <div class="form-group">
                 <label for="Name">Animal name
-                    <input type="text" name="Name" id="Name">
+                    <input type="text" name="Name" id="Name" class="form-control">
                 </label>
             </div>
             <div class="form-group">
                 <label for="health">Health
-                    <select name="health">
+                    <select name="health" class="form-control">
                         <option>Ill</option>
                         <option>Unknown</option>
                         <option>Healthy</option>
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="age">Age
-                    <select name="age">
+                    <select name="age" class="form-control">
                         <option>Newborn</option>
                         <option>Young</option>
                         <option>Adult</option>
@@ -33,12 +33,12 @@
             </div>
             <div class="form-group">
                 <label for="ranger"> Ranger in Charge
-                    <input type="text" name="ranger" id="ranger">
+                    <input type="text" name="ranger" id="ranger" class="form-control">
                 </label>
             </div>
             <div class="form-group">
                 <label for="location">Location
-                    <select name="location">
+                    <select name="location" class="form-control">
                         <option>Area Section 001</option>
                         <option>Area Section 002</option>
                         <option>Area Section 003</option>
@@ -50,7 +50,7 @@
             </div>
             <div class="form-group">
                 <label for="sightingId">Sighting Id
-                    <input type="text" id="sightingId" name="sightingId">
+                    <input type="text" id="sightingId" name="sightingId" class="form-control">
                 </label>
             </div>
             <button type="submit" class="btn btn-success">Add Animal</button>
