--- a/src/main/resources/templates/endangered-form.hbs
+++ b/src/main/resources/templates/endangered-form.hbs
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label for="health">Health
-                    <select name="health">
+                    <select name="health" class="form-control">
                         <option>Ill</option>
                         <option>Unknown</option>
                         <option>Healthy</option>
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label for="age">Age
-                    <select name="age">
+                    <select name="age" class="form-control">
                         <option>Newborn</option>
                         <option>Young</option>
                         <option>Adult</option>
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label for="ranger">Ranger that found it
-                    <select name="ranger">
+                    <select name="ranger" class="form-control">
                         {{#each rangers}}
                             <option>{{name}}</option>
                         {{/each}}
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
                 <label for="location">Location
-                    <select name="location">
+                    <select name="location" class="form-control">
                         <option>Area Section 001</option>
                         <option>Area Section 002</option>
                         <option>Area Section 003</option>
