--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -5,15 +5,15 @@
         <div class="row">
             <div class="col-md-6">
                 <img src="/images/1.jpeg" width="150" height="150"><br>
-                <a href="/animal/form">Add new Animal</a>
+                <a href="/animal/form">Add Animal</a>
             </div>
             <div class="col-md-6">
                 <img src="/images/2.jpeg" width="150" height="150"><br>
-                <a href="/Endangered/form">Add new Endangered animals</a>
+                <a href="/Endangered/form">Add Endangered Animal</a>
             </div>
             <div class="col-md-6">
                 <img src="/images/3.jpg" width="150" height="150" ><br>
-                <a href="/ranger/form">Add rangers</a>
+                <a href="/ranger/form">Add Rangers</a>
             </div>
             <div class="col-md-6">
                 <img src="/images/4.jpeg" width="150" height="150" ><br>
