--- a/src/main/resources/templates/ranger-form.hbs
+++ b/src/main/resources/templates/ranger-form.hbs
@@ -9,15 +9,15 @@
     <div class="jumbotron">
         <form method="post" action="/ranger/new">
             <label for="Name">Ranger name
-                <input type="text" name="Name">
+                <input type="text" name="Name" class="form-control">
             </label>
             <label for="Phone">Phone
-                <input type="text" name="Phone">
+                <input type="text" name="Phone" class="form-control">
             </label>
             <label for="Email">Email
-                <input type="email" name="Email">
+                <input type="email" name="Email" class="form-control">
             </label>
-            <button type="submit">Add ranger</button>
+            <button type="submit" class="btn btn-success">Add ranger</button>
         </form>
     </div>
 {{/partial}}
