--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -17,7 +17,7 @@
             </div>
             <div class="col-md-6">
                 <img src="/images/4.jpeg" width="150" height="150" ><br>
-                <a href="/ranger/form">About</a>
+                <a href="/about">About</a>
             </div>
         </div>
     </div>
