This commit is for minor debugging changes

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -9,7 +9,7 @@
             </div>
             <div class="col-md-6">
                 <img src="/images/2.jpeg" width="150" height="150"><br>
-                <a href="/Endangered/form">Add Endangered Animal</a>
+                <a href="/endangered/form">Add Endangered Animal</a>
             </div>
             <div class="col-md-6">
                 <img src="/images/3.jpg" width="150" height="150" ><br>
