This commit ensures form submission is successful

--- a/src/main/resources/templates/endangered-form.hbs
+++ b/src/main/resources/templates/endangered-form.hbs
@@ -7,7 +7,7 @@
 
 {{#partial "content"}}
     <div class="jumbotron">
-        <form action="/Endangered/new" method="post" name="endangered">
+        <form action="/endangered/new" method="post" name="endangered">
             <div class="form-group">
                 <label for="Name">Animal name
                     <select name="Name">
