--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -7,8 +7,8 @@
 
 {{#partial "content"}}
     <div class="jumbotron">
-        <h2 class="success">SUCCESS !!!</h2>
-        <p>Click  <a href="/">here</a> to return to home page</p>
+        <h2 class="text-warning">Congratulations. Successfully Recorded!</h2>
+        <p> <a href="/">Go back to Home</a> </p>
     </div>
 {{/partial}}
 {{> layout.hbs}}
