--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -11,7 +11,7 @@ img{
 
 }
 .col-md-4{
-    border: double;
+    border: transparent;
     border-radius : 100px;
 
 }
@@ -22,7 +22,7 @@ a{
 }
 .jumbotron{
     border-radius : 100px;
-    border: double;
+    border: transparent;
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     color: black;
 
@@ -143,7 +143,6 @@ a{
 
 .text-warning {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    color: white;
 }
 
 h1 {
