This commit debugs the code to ensure application runs seamlessly

--- a/src/main/resources/templates/about.hbs
+++ b/src/main/resources/templates/about.hbs
@@ -7,7 +7,8 @@
 
 {{#partial "content"}}
     <div class="jumbotron">
-       <p>Lorem Ipsum... </p>
+        <h1> About the Douglas Fir Application</h1>
+       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dignissimos doloribus exercitationem illum itaque iure maiores natus nemo nihil, nisi odit placeat quia quisquam rerum, similique soluta suscipit ullam veniam. </p>
     </div>
 {{/partial}}
 {{> layout.hbs}}
