--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -11,7 +11,7 @@
 <ul class="nav nav-tabs" id ="navbar">
     <li role="presentation" class="nav"><a href="/">Home</a></li>
     <li role="presentation" class="nav"><a href="/animals/new">All Animals</a></li>
-    <li role="presentation" class="nav"><a href="/Endangered/new">Endangered Animals</a></li>
+    <li role="presentation" class="nav"><a href="/endangered/new">Endangered Animals</a></li>
     <li role="presentation" class="nav"><a href="/ranger/new">Rangers</a></li>
 </ul>
 <div class="container">
